--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,18 @@
-# This workflow will build a .NET project
+deploy: 
+    runs-on: ubuntu-latest
+    needs: build 
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.1.0
+      with:
+        name: webapp
+        path: webapp
+    - name: Deploy web app
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: GitHubApp-43502115
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
+        package: webapp# This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
@@ -34,3 +48,18 @@ jobs:
         name: webapp
         path: website/**
         if-no-files-found: warn
+  deploy: 
+    runs-on: ubuntu-latest
+    needs: build 
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.1.0
+      with:
+        name: webapp
+        path: webapp
+    - name: Deploy web app
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: GitHubApp-43502115
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
+        package: webapp
